# OOPClasses

Day2/sheet2ex1/: CMakeLists.txt  main.cpp  validaDados.cpp  validaDados.h
Day2/sheet2ex3/: CMakeLists.txt  main.cpp  myCout.cpp  myCout.h
Day2/sheet2ex4/: CMakeLists.txt  main.cpp  multiplication.cpp  multiplication.h
Day2/sheet2ex5/: CMakeLists.txt  main.cpp  swapper.cpp  swapper.h
Day2/sheet2ex6/: CMakeLists.txt  main.cpp  selector.cpp  selector.h
Day2/sheet2ex7/: CMakeLists.txt  main.cpp  matrixManipulator.cpp  matrixManipulator.h
Day3/sheet3ex1/: CMakeLists.txt  main.cpp  table.cpp  table.h
Day3/sheet3ex2/: Automovel.cpp  Automovel.h  CMakeLists.txt
Day3/sheet3ex4/: CMakeLists.txt  main.cpp  safe.cpp  safe.h
Day3/sheet3ex5/: CMakeLists.txt  MSG.cpp  MSG.h  main.cpp
Day4/ex1s4/: CMakeLists.txt  fraction.cpp  fraction.h  main.cpp
Day4/ex1s5/: CMakeLists.txt  automovel.cpp  automovel.h  main.cpp  wheel.cpp  wheel.h
Day4/ex2s4/: CMakeLists.txt  main.cpp  vector.cpp  vector.h
Day5/sheet6e1/: CMakeLists.txt  Registo.cpp  Registo.h  clube.cpp  clube.h  main.cpp  pessoa.cpp  pessoa.h
TP/: Buffer.cpp  CMakeLists.txt  Caravana.cpp  Cidade.cpp  Item.cpp  Mercadoria.cpp  Tempestade.cpp  configs.cpp  main.cpp  teste.txt
TP/headers/: Buffer.h  Caravana.h  Cidade.h  Item.h  Mercadoria.h  Tempestade.h  configs.h  structs.h
day1/: CMakeLists.txt  main.cpp
